--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,20 @@
         <scope>compile</scope>
       </dependency>
 
+      <dependency>
+        <groupId>org.glite.lb</groupId>
+        <artifactId>jobid-api-java</artifactId>
+        <version>1.3.4</version>
+        <scope>compile</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.glite.lb</groupId>
+        <artifactId>lb-client-java</artifactId>
+        <version>2.0.2</version>
+        <scope>compile</scope>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
