--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.glite</groupId>
   <artifactId>cream-parent</artifactId>
-  <version>0.8.0</version>
+  <version>0.9.0</version>
   <packaging>pom</packaging>
   
   <organization>
@@ -35,6 +35,13 @@
         <groupId>org.glite.security</groupId>
         <artifactId>trustmanager-axis2</artifactId>
         <version>1.0.1</version>
+        <scope>compile</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.glite.security</groupId>
+        <artifactId>trustmanager-tomcat</artifactId>
+        <version>3.0.1</version>
         <scope>compile</scope>
       </dependency>
 
