--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.glite</groupId>
   <artifactId>cream-parent</artifactId>
-  <version>1.0.2</version>
+  <version>1.0.3</version>
   <packaging>pom</packaging>
   
   <organization>
@@ -27,7 +27,7 @@
       <dependency>
         <groupId>eu.eu-emi.security</groupId>
         <artifactId>canl</artifactId>
-        <version>1.3.2</version>
+        <version>2.1.1</version>
         <scope>compile</scope>
       </dependency>
 
@@ -41,7 +41,7 @@
       <dependency>
         <groupId>org.italiangrid</groupId>
         <artifactId>voms-api-java</artifactId>
-        <version>3.0.2</version>
+        <version>3.0.5</version>
         <scope>compile</scope>
       </dependency>
 
@@ -124,8 +124,8 @@
 
       <dependency>
         <groupId>org.bouncycastle</groupId>
-        <artifactId>bcprov-jdk15</artifactId>
-        <version>1.46</version>
+        <artifactId>bcprov-jdk15on</artifactId>
+        <version>1.50</version>
         <scope>compile</scope>
       </dependency>
 
