Removed profiles for SL

--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
       <dependency>
         <groupId>org.italiangrid</groupId>
         <artifactId>voms-api-java</artifactId>
-        <version>3.0.5</version>
+        <version>3.1.0.rc1-SNAPSHOT</version>
         <scope>compile</scope>
       </dependency>
 
@@ -124,29 +124,29 @@
 
       <dependency>
         <groupId>org.bouncycastle</groupId>
-        <artifactId>bcprov-jdk15on</artifactId>
-        <version>1.50</version>
+        <artifactId>${bcprov.artifactid}</artifactId>
+        <version>${bcprov.version}</version>
         <scope>compile</scope>
       </dependency>
 
       <dependency>
-        <groupId>${tomcat.servlet.groupid}</groupId>
-        <artifactId>servlet-api</artifactId>
-        <version>${tomcat.servlet.version}</version>
-        <scope>compile</scope>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>servlet-api</artifactId>
+	    <version>2.5</version>
+	    <scope>provided</scope>
       </dependency>
 
       <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
-        <version>1.2.16</version>
+        <version>1.2.14</version>
         <scope>compile</scope>
       </dependency>
 
       <dependency>
         <groupId>commons-httpclient</groupId>
         <artifactId>commons-httpclient</artifactId>
-        <version>3.0</version>
+        <version>3.1</version>
         <scope>compile</scope>
       </dependency>
 
@@ -156,101 +156,17 @@
   <properties>
   
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <tomcat.servlet.groupid>tomcat</tomcat.servlet.groupid>
-    <tomcat.servlet.version>5.5.23</tomcat.servlet.version>
+    <bcprov.artifactid>bcprov-jdk15on</bcprov.artifactid>
+    <bcprov.version>1.50</bcprov.version>
+    <!-- bcprov on SL6
+    <bcprov.artifactid>bcprov-jdk15</bcprov.artifactid>
+    <bcprov.version>1.46</bcprov.version>
+    -->
 
   </properties>
   
   <profiles>
   
-    <profile>
-      <id>build_on_SL5</id>
-
-      <properties>
-        <tomcat.servlet.groupid>tomcat</tomcat.servlet.groupid>
-        <tomcat.servlet.version>5.5.23</tomcat.servlet.version>
-      </properties>
-      
-      <dependencyManagement>
-        <dependencies>
-
-          <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk15</artifactId>
-            <version>1.45</version>
-            <scope>compile</scope>
-          </dependency>
-
-          <dependency>
-            <groupId>${tomcat.servlet.groupid}</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>${tomcat.servlet.version}</version>
-            <scope>compile</scope>
-          </dependency>
-
-          <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.13</version>
-            <scope>compile</scope>
-          </dependency>
-
-          <dependency>
-            <groupId>commons-httpclient</groupId>
-            <artifactId>commons-httpclient</artifactId>
-            <version>3.0</version>
-            <scope>compile</scope>
-          </dependency>
-
-        </dependencies>
-      </dependencyManagement>
-
-    </profile>
-
-    <profile>
-      <id>build_on_SL6</id>
-
-      <properties>
-        <tomcat.servlet.groupid>org.apache.tomcat</tomcat.servlet.groupid>
-        <tomcat.servlet.version>6.0.24</tomcat.servlet.version>
-      </properties>
-      
-      <dependencyManagement>
-        <dependencies>
-
-          <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk15</artifactId>
-            <version>1.46</version>
-            <scope>compile</scope>
-          </dependency>
-
-          <dependency>
-            <groupId>${tomcat.servlet.groupid}</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>${tomcat.servlet.version}</version>
-            <scope>compile</scope>
-          </dependency>
-
-          <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.14</version>
-            <scope>compile</scope>
-          </dependency>
-
-          <dependency>
-            <groupId>commons-httpclient</groupId>
-            <artifactId>commons-httpclient</artifactId>
-            <version>3.1</version>
-            <scope>compile</scope>
-          </dependency>
-
-        </dependencies>
-      </dependencyManagement>
-
-    </profile>
-
     <profile>
       <id>nexus_deploy</id>
       
