--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
       <dependency>
         <groupId>org.italiangrid</groupId>
         <artifactId>voms-api-java</artifactId>
-        <version>3.1.0.rc1-SNAPSHOT</version>
+        <version>3.0.5</version>
         <scope>compile</scope>
       </dependency>
 
