--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
       <dependency>
         <groupId>eu.eu-emi.security</groupId>
         <artifactId>canl</artifactId>
-        <version>2.1.1</version>
+        <version>2.1.2</version>
         <scope>compile</scope>
       </dependency>
 
@@ -41,21 +41,21 @@
       <dependency>
         <groupId>org.italiangrid</groupId>
         <artifactId>voms-api-java</artifactId>
-        <version>3.0.5</version>
+        <version>3.1.0</version>
         <scope>compile</scope>
       </dependency>
 
       <dependency>
         <groupId>org.glite.authz</groupId>
         <artifactId>pep-common</artifactId>
-        <version>2.3.0</version>
+        <version>2.3.1</version>
         <scope>compile</scope>
       </dependency>
 
       <dependency>
         <groupId>org.glite.authz</groupId>
         <artifactId>pep-java</artifactId>
-        <version>2.2.0</version>
+        <version>2.3.0</version>
         <scope>compile</scope>
       </dependency>
 
@@ -75,8 +75,15 @@
 
       <dependency>
         <groupId>org.apache.axis2</groupId>
-        <artifactId>axis2</artifactId>
-        <version>1.6.1</version>
+        <artifactId>axis2-kernel</artifactId>
+        <version>1.6.4</version>
+        <scope>compile</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.axis2</groupId>
+        <artifactId>axis2-adb</artifactId>
+        <version>1.6.4</version>
         <scope>compile</scope>
       </dependency>
 
@@ -124,8 +131,15 @@
 
       <dependency>
         <groupId>org.bouncycastle</groupId>
-        <artifactId>${bcprov.artifactid}</artifactId>
-        <version>${bcprov.version}</version>
+        <artifactId>bcprov-jdk15on</artifactId>
+        <version>1.50</version>
+        <scope>compile</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.bouncycastle</groupId>
+        <artifactId>bcpkix-jdk15on</artifactId>
+        <version>1.50</version>
         <scope>compile</scope>
       </dependency>
 
@@ -156,15 +170,9 @@
   <properties>
   
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <bcprov.artifactid>bcprov-jdk15on</bcprov.artifactid>
-    <bcprov.version>1.50</bcprov.version>
-    <!-- bcprov on SL6
-    <bcprov.artifactid>bcprov-jdk15</bcprov.artifactid>
-    <bcprov.version>1.46</bcprov.version>
-    -->
-
     <cream.wsdl.url>http://italiangrid.github.io/cream-interface/WS/CREAM</cream.wsdl.url>
     <es.wsdl.url>http://italiangrid.github.io/cream-interface/WS/ES</es.wsdl.url>
+
   </properties>
   
   <profiles>
