--- a/pom.xml
+++ b/pom.xml
@@ -209,6 +209,35 @@
       <name>Internal Repository</name>
       <url>http://igi-01.pd.infn.it/mrepo/grid-dev/maven</url>
     </repository>
+    <repository>
+      <id>switch</id>
+      <name>SWITCH Releases</name>
+      <url>http://www.switch.ch/grid/authz/docs/maven2/release</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>internet2</id>
+      <name>Internet2 Releases</name>
+      <url>https://build.shibboleth.net/nexus/content/repositories/releases</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>herasaf</id>
+      <name>HERAS-AF Repository</name>
+      <url>http://maven.herasaf.org/repo</url>
+    </repository>
+    <repository>
+      <id>central-uk</id>
+      <name>Maven Repository Mirror</name>
+      <url>http://uk.maven.org/maven2</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
   </repositories>
 
 </project>
